fix nav covering up hero on smallest display size

--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -1,6 +1,5 @@
 .header {
   @include media-breakpoint-down(md) {
-    position: fixed;
     z-index: 99;
     width: 100%;
     height: 64px;
